[package]
name = "husk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
indexmap = "2.2.6"
rustyline = "14.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-home-dir = "0.3.5"
thiserror = "1.0.61"
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
