[package]
name = "husk-lang"
version = "0.1.0"
edition = "2021"
description = "Rust's syntax meets JavaScript's flexibility - Choose your own adventure: Run interpreted for rapid development or transpile to JavaScript for the entire npm ecosystem"
license = "MIT"
authors = ["Felipe Coury <felipe.coury@gmail.com>"]
repository = "https://github.com/fcoury/husk"
homepage = "https://husk-lang.org"
documentation = "https://husk-lang.org/docs"
keywords = [
  "language",
  "interpreter",
  "transpiler",
  "javascript",
  "rust-syntax",
]
categories = ["development-tools", "compilers", "command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1.0.86"
atty = "0.2"
clap = { version = "4.5.8", features = ["derive"] }
indexmap = "2.2.6"
rustyline = "14.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-home-dir = "0.3.5"
termcolor = "1.4"
thiserror = "1.0.61"
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
