[workspace]
resolver = "3"
members = [
    "crates/husk-ast",
    "crates/husk-lexer",
    "crates/husk-parser",
    "crates/husk-types",
    "crates/husk-semantic",
    "crates/husk-codegen-js",
    "crates/husk-runtime-js",
    "crates/husk-lang",
    "crates/husk-lsp",
    "crates/husk-dts-parser",
    "crates/husk-fmt",
]

[workspace.package]
version = "0.1.3"
edition = "2024"
description = "Rust's syntax meets JavaScript's flexibility" 
authors = ["Felipe Coury <felipe.coury@gmail.com>"]
license = "MIT"
repository = "https://github.com/husk-lang/husk"
homepage = "https://husk-lang.org"
documentation = "https://husk-lang.org/docs/index.html"
keywords = [
  "language",
  "interpreter",
  "transpiler",
  "javascript",
  "rust-syntax",
]
categories = ["development-tools", "compilers", "command-line-utilities"]
readme = "README.md"
rust-version = "1.89"

[workspace.dependencies]
husk-ast = { version = "0.1.3", path = "crates/husk-ast" }
husk-codegen-js = { version = "0.1.3", path = "crates/husk-codegen-js" }
husk-dts-parser = { version = "0.1.3", path = "crates/husk-dts-parser" }
husk-fmt = { version = "0.1.3", path = "crates/husk-fmt" }
husk-lexer = { version = "0.1.3", path = "crates/husk-lexer" }
husk-parser = { version = "0.1.3", path = "crates/husk-parser" }
husk-runtime-js = { version = "0.1.3", path = "crates/husk-runtime-js" }
husk-semantic = { version = "0.1.3", path = "crates/husk-semantic" }
husk-types = { version = "0.1.3", path = "crates/husk-types" }
serde_json = "^1.0.145" #unified
tempfile = "^3.23.0" #unified
thiserror = "^1.0.69" #unified
