[package]
name = "husk-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
husk-parser = { path = "../husk-parser" }
husk-semantic = { path = "../husk-semantic" }
husk-codegen-js = { path = "../husk-codegen-js" }
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "huskc"
path = "src/main.rs"
