[package]
name = "husk-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
husk-lexer = { path = "../husk-lexer" }
husk-parser = { path = "../husk-parser" }
husk-semantic = { path = "../husk-semantic" }
husk-codegen-js = { path = "../husk-codegen-js" }
husk-ast = { path = "../husk-ast" }
husk-dts-parser = { path = "../husk-dts-parser" }
husk-fmt = { path = "../husk-fmt" }
clap = { version = "4", features = ["derive"] }
thiserror = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
toml_edit = "0.22"
codespan-reporting = "0.11"
notify = "6"
notify-debouncer-mini = "0.4"

[[bin]]
name = "huskc"
path = "src/main.rs"

[dev-dependencies]
glob = "0.3"
tempfile = "3"
