[package]
name = "husk-codegen-js"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JavaScript code generation for the Husk programming language"

[dependencies]
husk-ast.workspace = true
husk-runtime-js.workspace = true
husk-semantic.workspace = true
sourcemap = "9"

[dev-dependencies]
serde_json = { workspace = true } #unified
