[package]
name = "husk-dts-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TypeScript declaration file (.d.ts) parser for Husk"

[dependencies]
oxc_allocator = { version = "0.101.0" }
oxc_parser = { version = "0.101.0" }
oxc_span = { version = "0.101.0" }
oxc_ast = { version = "0.101.0" }
oxc_diagnostics = { version = "0.101.0" }

[dev-dependencies]
