[package]
name = "husk-dts-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TypeScript declaration file (.d.ts) parser for Husk"

[dependencies]
# Oxc - High-performance TypeScript parser
oxc_allocator = "0.98"
oxc_parser = "0.98"
oxc_ast = "0.98"
oxc_ast_visit = "0.98"
oxc_span = "0.98"
oxc_diagnostics = "0.98"

# Case conversion utilities
heck = "0.5"

# JSON parsing for package.json
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
codespan-reporting = "0.11"
husk-parser = { path = "../husk-parser" }
husk-lexer = { path = "../husk-lexer" }
husk-semantic = { path = "../husk-semantic" }
husk-codegen-js = { path = "../husk-codegen-js" }
