[package]
name = "husk-dts-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TypeScript declaration file (.d.ts) parser for Husk"

[dependencies]

# Case conversion utilities
heck = "0.5"
# Oxc - High-performance TypeScript parser
oxc_allocator = "0.98"
oxc_ast = "0.98"
oxc_ast_visit = "0.98"
oxc_diagnostics = "0.98"
oxc_parser = "0.98"
oxc_span = "0.98"
serde_json = { workspace = true } #unified

[dev-dependencies]
codespan-reporting = "0.11"
husk-codegen-js = { path = "../husk-codegen-js" }
husk-lexer = { path = "../husk-lexer" }
husk-parser = { path = "../husk-parser" }
husk-semantic = { path = "../husk-semantic" }
tempfile = { workspace = true } #unified
