[package]
name = "husk-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code formatter for the Husk programming language"

[dependencies]
husk-ast.workspace = true
husk-lexer.workspace = true
husk-parser.workspace = true
thiserror = "1.0"
