[package]
name = "husk-lang"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Husk programming language compiler"

[dependencies]
husk-lexer.workspace = true
husk-parser.workspace = true
husk-semantic.workspace = true
husk-codegen-js.workspace = true
husk-ast.workspace = true
husk-dts-parser.workspace = true
husk-fmt.workspace = true
clap = { version = "4", features = ["derive"] }
thiserror = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
toml_edit = "0.22"
codespan-reporting = "0.11"
notify = "6"
notify-debouncer-mini = "0.4"

[[bin]]
name = "huskc"
path = "src/main.rs"

[dev-dependencies]
glob = "0.3"
tempfile = "3"
