[package]
name = "husk-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Language Server Protocol implementation for Husk"

[[bin]]
name = "husk-lsp"
path = "src/main.rs"

[dependencies]
dashmap = "6"
husk-ast.workspace = true
husk-lang = { path = "../husk-lang" }

# Reuse existing Husk crates
husk-lexer.workspace = true
husk-parser.workspace = true
husk-semantic.workspace = true
husk-types.workspace = true
serde_json = { workspace = true } #unified
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
